--- a/.github/workflows/tf-mlops-dev.yml
+++ b/.github/workflows/tf-mlops-dev.yml
@@ -1,23 +1,25 @@
 name: Terraform CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
   workflow_dispatch:
 
 jobs:
   terraform:
-    name: Terraform Plan
+    name: Terraform Plan Etc.
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform/
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout code repository
         uses: actions/checkout@v4
 
       - name: Set up Terraform
@@ -25,12 +27,11 @@ jobs:
         with:
           terraform_version: 1.5.7
 
-      - name: Terraform Init
-        run: terraform init
+      - name: Terraform Init 
+        run: terraform init --backend-config="backends/dev.conf"
+
+      - name: Terraform Validate 
+      run: terraform validate 
 
       - name: Terraform Plan
         run: terraform plan
-
-      # Optional: enable only if you want auto-deploys
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve
