--- a/.github/workflows/tf-mlops-dev.yml
+++ b/.github/workflows/tf-mlops-dev.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: terraform/
+        working-directory: terraform
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -31,7 +31,7 @@ jobs:
         run: terraform init --backend-config="backends/dev.conf"
 
       - name: Terraform Validate 
-      run: terraform validate 
+        run: terraform validate 
 
       - name: Terraform Plan
         run: terraform plan
