--- a/.github/workflows/tf-mlops-dev.yml
+++ b/.github/workflows/tf-mlops-dev.yml
@@ -1,37 +1,49 @@
 name: Terraform CI
 
+# Controls when the workflow will run
 on:
-  push:
-    branches: [ "main" ]
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
     branches: [ "main" ]
-
+  push:
+    branches: [ "main" ]
+  
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  terraform:
-    name: Terraform Plan Etc.
+  terraform-validate-plan-apply:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: .
 
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
     steps:
-      - name: Checkout code repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Terraform Init 
-        run: terraform init --backend-config="backends/dev.conf"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
 
-      - name: Terraform Validate 
-        run: terraform validate 
+      - name: Terraform Format
+        run: terraform fmt -check
+        continue-on-error: true
+
+      - name: Terraform Init
+        run: terraform init --backend-config='backends/dev.conf'
+
+      - name: Terraform Validate
+        run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -no-color --var-file='environments/dev.tfvars'
+
+      - name: Terraform Apply
+        run: terraform apply --var-file='environments/dev.tfvars' -auto-approve
