--- a/.github/workflows/tf-infra-cicd-dev.yml
+++ b/.github/workflows/tf-infra-cicd-dev.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: mlops-course-02/terraform
+        working-directory: terraform
 
     steps:
       - name: Checkout repository
