--- a/.github/workflows/infra-cicd-dev.yml
+++ b/.github/workflows/infra-cicd-dev.yml
@@ -1,20 +1,21 @@
-name: Terraform CI
+# .github/workflows/infra-cicd-dev.yml
+name: Infrastructure CI/CD
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
     branches: [ "main" ]
-  
-  # Allows you to run this workflow manually from the Actions tab
+    paths: 
+      - 'terraform/**'
   workflow_dispatch:
 
 jobs:
-  terraform-validate-plan-apply:
+  terraform-plan-apply:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: terraform
+    permissions:
+      issues: write
 
     steps:
       - name: Checkout repository
@@ -28,7 +29,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-north-1
+          aws-region: eu-west-1
 
       - name: Terraform Format
         run: terraform fmt -check
@@ -41,7 +42,17 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan -no-color --var-file='environments/dev.tfvars'
+        run: terraform plan -no-color --var-file='environments/dev.tfvars' -out=plan.tfout
+      
+      - name: Approval
+        uses: trstringer/manual-approval@v1
+        timeout-minutes: 60
+        with:
+          secret: ${{ github.token }}
+          approvers: geekzyn
+          issue-title: "Deploy Terraform Plan to dev"
+          issue-body: "Please review the Terraform Plan"
+          exclude-workflow-initiator-as-approver: false
 
       - name: Terraform Apply
-        run: terraform apply --var-file='environments/dev.tfvars' -auto-approve
+        run: terraform apply -auto-approve plan.tfout
