--- a/.github/workflows/infra-cicd-dev.yml
+++ b/.github/workflows/infra-cicd-dev.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+            repository: FreBio/MLops
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
