--- a/.github/workflows/infra-cicd-dev.yml
+++ b/.github/workflows/infra-cicd-dev.yml
@@ -49,7 +49,7 @@ jobs:
         timeout-minutes: 60
         with:
           secret: ${{ github.token }}
-          approvers: geekzyn
+          approvers: FreBio
           issue-title: "Deploy Terraform Plan to dev"
           issue-body: "Please review the Terraform Plan"
           exclude-workflow-initiator-as-approver: false
